# LMArenaBridge

./: .gitignore  CLI_README.md  DISTRIBUTED_API_README.md  api_server.py  cli.py  deploy.py  local_openai_history_server.py  main.py  model_endpoint_map.json  pyproject.toml
distributed_clients/: browser_client.py  enhanced_tampermonkey_script.js  requirements.txt
modules/: cli.py
php_api/config/: config.php  database.php
php_api/includes/: ApiAuth.php  BrowserSessionManager.php  RequestQueue.php  TokenCounter.php
php_api/public_html/api/browser/: poll.php  register.php  response.php
php_api/public_html/dashboard/: index.php
php_api/public_html/v1/: models.php  usage.php
php_api/public_html/v1/chat/: completions.php
setup/: install.php
